Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Is it time for a new World Wide Web? by Jonovono</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  </head>
+  <body>
 
-  <title>Is it time for a new World Wide Web?</title>
-  <meta name="description" content="">
+      <header>
+        <h1>Is it time for a new World Wide Web?</h1>
+        <p></p>
+      </header>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+      <div id="banner">
+        <span id="logo"></span>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Is it time for a new World Wide Web?</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Jonovono/TOBEWEB/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Jonovono/TOBEWEB/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Jonovono/TOBEWEB" class="code">View Is it time for a new World Wide Web? on GitHub</a>
+        <a href="https://github.com/Jonovono/TOBEWEB" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/Jonovono/TOBEWEB/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/Jonovono/TOBEWEB/tarball/master" class="button">TAR</a></li>
+          </ul>
         </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>The World Wide Web</h1>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h1>The World Wide Web</h1>
 
 <p><strong>Since the WWW went live a lot has changed. The web/internet are being used in ways that would never have been imagined back then. Knowing what we know now, how could it be redesigned  to make use of new technologies, and ideas that have become more important?</strong></p>
 
@@ -92,7 +95,7 @@ If I am wrong/mistaken about something, please let me know! --</p>
 <p>Few problems I have with Bitcoin:</p>
 
 <ol>
-<li>No regard for common users. The client is not friendly to your common user, being able to set up mining is not easy either. Money is awesome, and a crazy motivator. I see everyone getting so into Bitcoin mining, setting up rigs, and wonder what if it was made so it was easy for common users to experience that. Not that it would be easy to get the money, but the process was more inviting. I have some ideas which i'll discuss later, but still not entirely sure if this is feasible. Ultimately, i'd like to see people unafraid to spend this as it is essentially their online currency. ( Maybe even give the coins a half-life to encourage spending :p )</li>
+<li>No regard for common users. The client is not friendly to your common user, being able to set up mining is not easy either. Money is awesome, and a crazy motivator. I see everyone getting so into Bitcoin mining, setting up rigs, and wonder what if it was made so it was easy for common users to experience that. Not that it would be easy to get the money, but the process was more inviting. I have some ideas which i'll discuss later, but still not entirely sure if this is feasible. Ultimately, i'd like to see people unafraid to spend this as it is essentially their online currency. ( Maybe even give the coins a half-life to encourage spending :p ) Even the adresses. Is there a way this could be tied to an email? Not everyone would be ultra worried about being anonymous. </li>
 <li>It is great that there are no transaction costs. However, once all of the Bitcoins have been distributed it will cost a transaction fee to encourage Miners to validate the transaction. At this point the mining will be very difficult (the difficulty increases), so how much will the fees have to be to make it worthwhile? I am not sure how/if this problem can be solved and still keep the anonymity/decentralization/security of the currency  in place. But I'd like to explore ideas on that because that is something that makes Bitcoin exciting, the ability to send money like you would email!</li>
 </ol><p>There are other things that could be improved, but these are the main ones for now.</p>
 
@@ -163,31 +166,19 @@ If I am wrong/mistaken about something, please let me know! --</p>
 
 <h2>Vote Online?</h2>
 
-<p><a href="http://people.scs.carleton.ca/%7Eclark/projects/commitcoin/">CommitCoin</a></p>
+<p>If voting online could be implemented in a secure way it could have a profound effect on politics (well, probably not, but maybe we can start a new country..). A project that uses Bitcoin to assist with this is at: 
+<a href="http://people.scs.carleton.ca/%7Eclark/projects/commitcoin/">CommitCoin</a></p>
 
 <h2>Conclusion</h2>
 
 <p>I know this just looks like a bunch of complaining with no solutions. The Web is awesome though, and these are just some things I think would improve it. I'd love to work on something like this. If you are interested, check out the contact section!</p>
-        </article>
-      </div>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/Jonovono">Jonovono</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Jonovono" class="avatar"><img src="https://secure.gravatar.com/avatar/477556bbd7ac8b05ba1eefeef785b7a3?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/Jonovono">Jonovono</a> maintains <a href="https://github.com/Jonovono/TOBEWEB">Is it time for a new World Wide Web?</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Jonovono/TOBEWEB/tarball/master" class="tar">tar</a><a href="https://github.com/Jonovono/TOBEWEB/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
