--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Is it time to re-imagine the World Wide Web by Jonovono</title>
+    <title>Re design the Web by Jonovono</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Is it time to re-imagine the World Wide Web</h1>
+        <h1>Re design the Web</h1>
         <p></p>
         <p class="view"><a href="https://github.com/Jonovono/Wpp">View the Project on GitHub <small>Jonovono/Wpp</small></a></p>
         <ul>
@@ -48,7 +48,7 @@ If I am misguided about something, please let me know! --</p>
 
 <ul>
 <li>
-<p>Users would be required to download a new browser (Peer-to-peer, browser). </p>
+<p>Users would be required to download a new software.</p>
 
 <ul>
 <li>Bundled in this would be your Tent server that is easily configurable, if a digital currency was used your Bitcoin/whatever wallet, and other things. I'd like to have Tent (or something like it) built into it from the start. </li>
@@ -56,11 +56,11 @@ If I am misguided about something, please let me know! --</p>
 <li>I don't know if this would be easier than convincing new websites on the current Web to start using Tent or not, but my hope is that since we could re-design this network we could make it more exciting for developers to develop on than the current implementation. </li>
 </ul>
 </li>
-<li><p>The DOM and use of Javascript/HTML/CSS etc could be analysed. What's a better way? What could be improved? I would like to have a much better way to develop apps that work well cross platform.</p></li>
+<li><p>The DOM and use of Javascript/HTML/CSS etc could be analysed. What's a better way? What could be improved? I would like to have a much better way to develop apps that work well cross platform (mobile, tablet).</p></li>
 <li><p>There is data and how that data is viewed. To get the ball rolling on the semantic web the data has to be separate and easily accessible. Right now if you want your restaurant, for example, searchable you need to make an entire website for it. Why can't you just put the data online. </p></li>
 <li><p>Not necessarily run based off domain names. I think it's time we can do away with domain names. But if that proves to be the best way still, then at least make the DNS decentralized when necessary. </p></li>
 <li><p>There are common things most people use, like sending messages, liking thing, saving pages. Why do I have to go to FB to send someone a cool link. Some of these could be built into the browser.</p></li>
-</ul><p>Basically, I'd like to see the entire network re-designed now that we know essentially everything we do goes through the internet and it is being used in ways we could not have for seen. Just like when you join a society there is a money system, you get a passport etc for your identity. Why is the Internet not like that. I understand the web couldn't really break free from the laws of the real world (or could it if decentralized, p2p :p ). But I think it makes sense to include some more basic things into the system for a better experience like the ability to own your data and do with it what you wish, make easy payments, sign up easier, etc. </p>
+</ul><p>Basically, I'd like to see a new system thought out now that we know essentially everything we do goes through the internet and it is being used in ways we could not have predicted. Just like when you join a society there is a money system, you get a passport etc for your identity. Why is the Internet not like that. I understand the web couldn't really break free from the laws of the real world (or could it if decentralized, p2p :p ). But I think it makes sense to include some more basic things into the system for a better experience like the ability to own your data and do with it what you wish, make easy payments, sign up easier, etc. I'd like to see more services offered as decentralized/P2P. Sites like Github would be great that if they shut down or whatever, all of that was still easily accessible.</p>
 
 <p>So hopefully you find this somewhat interesting. And I hope you share any feedback you have here, on HN or emailing me!</p>
 
